--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,16 @@
+h1
+{
+	text-align: center;
+}
+
+
+nav
+{
+	text-align: center;
+}
+
 nav ul li
 {
 	display: inline-block;
+	padding: 0 1em 0 0;
 }
