--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,15 @@
+footer
+{
+	text-align: center;
+}
 h1
 {
 	text-align: center;
 }
-
-
+p
+{
+	text-align: center;
+}
 nav
 {
 	text-align: center;
