--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,8 @@
-footer
-{
-	text-align: center;
-}
-h1
-{
-	text-align: center;
-}
-p
-{
-	text-align: center;
-}
-nav
-{
-	text-align: center;
-}
-
-nav ul li
-{
-	display: inline-block;
-	padding: 0 1em 0 0;
-}
+footer{text-align:center}
+h1{text-align:center;text-color:#525252}
+h2{text-align:center}
+p{font-size:1.3em;text-align:center}
+nav{text-align:center}
+nav ul li{display:inline-block;font-size:2em;padding:0 1em 0 0}
+#seccion1{background-color:#c8c8c8}
+#seccion2{background-color:#c8c8c8}
