--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+a{text-decoration:none}
 body{background-color:#e8e8e8;color:#2c2c2c;font-family:Helvetica,Arial,serif}
 footer{text-align:center}
 h1{font-size:5em;text-align:center;text-color:#525252}
